
0.18  2013-11-11
  - Fixed bug in Mango::BSON where all objects that stringify to "1" were
    considered booleans.

0.17  2013-10-30
  - Added cursor and collection support for aggregation.
  - Added add_batch method to Mango::Cursor.
  - Added from_epoch method to Mango::BSON::ObjectID.

0.16  2013-10-12
  - Added support for fallback servers.
  - Fixed reconnect bugs.

0.15  2013-10-11
  - Fixed mongos compatibility bugs.

0.14  2013-10-06
  - Added DBRef support.
  - Added dereference method to Mango::Database.
  - Added bson_dbref function to Mango::BSON.

0.13  2013-09-21
  - Added fields argument to find and find_one methods in Mango::Collection.

0.12  2013-08-17
  - Fixed rewind bug in Mango::Cursor where the cursor would not be killed on
    the server.

0.11  2013-08-14
  - Changed return values of remove and update methods in Mango::Collection.

0.10  2013-08-06
  - Improved connection management to be more fault-tolerant.

0.09  2013-07-28
  - Added connection event to Mango.
  - Improved connection management to be fork-safe.

0.08  2013-07-20
  - Removed is_active method from Mango.
  - Added max_scan attribute to Mango::Cursor.
  - Added backlog method to Mango.

0.07  2013-07-18
  - Added is_closed method to Mango::GridFS::Writer.

0.06  2013-07-17
  - Added GridFS support.
  - Added modules Mango::GridFS, Mango::GridFS::Reader and
    Mango::GridFS::Writer.
  - Added gridfs method to Mango::Database.
  - Improved Mango::BSON performance. (avkhozov)
  - Fixed non-blocking connection pool timing bug.
  - Fixed ensure_index argument bug.

0.05  2013-07-06
  - Changed heuristics for number detection in Mango::BSON to better line up
    with user expectations.
  - Changed to_epoch in Mango::BSON::Time to return a high resolution time.
  - Added connection pool support for non-blocking operations.
  - Added max_connections attribute to Mango.
  - Added drop_index, index_information and stats methods to
    Mango::Collection.