@@ -1,5 +1,6 @@
 
 0.18  2013-11-11
+  - Fixed concurrency bugs in Mango.
   - Fixed bug in Mango::BSON where all objects that stringify to "1" were
     considered booleans.
 
